--- a/package.json
+++ b/package.json
@@ -24,24 +24,25 @@
   },
   "dependencies": {
     "@mozilla/readability": "^0.5.0",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.7.6",
     "chalk": "^4.1.2",
     "cheerio": "^1.0.0-rc.12",
     "cli-progress": "^3.12.0",
     "commander": "^11.1.0",
+    "curator-ai": "^0.0.5",
     "dotenv": "^16.3.1",
-    "jsdom": "^24.0.0",
-    "openai": "^4.24.3",
-    "rss-parser": "^3.13.0",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.7.6",
     "express": "^4.21.1",
+    "jsdom": "^24.0.0",
+    "openai": "^4.68.4",
     "postmark": "^4.0.5",
+    "rss-parser": "^3.13.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "scripts": {
     "build": "npx tsc",
     "start": "ts-node ./src/cli.ts",
-    "startConv" : "ts-node ./src/conversational_agent/server.ts"
+    "startConv": "ts-node ./src/conversational_agent/server.ts"
   }
 }
