bd_tools (utilisation case in test.ts) allow to modify and get bd informations from table via function in Type Script

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "build": "npx tsc",
     "start": "ts-node ./src/cli.ts",
     "startConv": "ts-node ./src/conversational_agent/server.ts",
-    "updateWebhook": "ts-node ./src/conversational_agent/updateWebhook.ts"
+    "updateWebhook": "ts-node ./src/conversational_agent/updateWebhook.ts",
+    "test": "ts-node ./src/conversational_agent/test.ts"
   }
 }
