Test with AI use of function to response

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "start": "ts-node ./src/cli.ts",
     "startConv": "ts-node ./src/conversational_agent/server.ts",
     "updateWebhook": "ts-node ./src/conversational_agent/updateWebhook.ts",
-    "test": "ts-node ./src/conversational_agent/test.ts"
+    "startTestConv" : "ts-node ./src/conversational_agent/server_test.ts",
+    "Test" : "ts-node ./src/conversational_agent/test.ts"
   }
 }
