--- a/package.json
+++ b/package.json
@@ -39,14 +39,16 @@
     "postmark": "^4.0.5",
     "rss-parser": "^3.13.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "zod": "^3.23.8"
   },
   "scripts": {
     "build": "npx tsc",
     "start": "ts-node ./src/cli.ts",
     "startConv": "ts-node ./src/conversational_agent/server.ts",
     "updateWebhook": "ts-node ./src/conversational_agent/updateWebhook.ts",
-    "startTestConv" : "ts-node ./src/conversational_agent/server_test.ts",
-    "Test" : "ts-node ./src/conversational_agent/test.ts"
+    "startTestConv": "ts-node ./src/conversational_agent/server_test.ts",
+    "Test": "ts-node ./src/conversational_agent/test.ts",
+    "structured-req" : "ts-node src/conversational_agent/test_structured_data.ts"
   }
 }
